<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dev.nipafx.demo</groupId>
	<artifactId>java-x</artifactId>
	<version>18.0</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- setting `release` doesn't work because of the `add-opens` below -->
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>21.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>21.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>

		<finalName>java-x</finalName>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<!-- needed for preview language features (like pattern switches were in Java 18) -->
					<enablePreview>true</enablePreview>
					<compilerArgs>
						<!-- get access to `@ReservedStackAccess` in `ReservingStackAreas` -->
						<arg>--add-exports=java.base/jdk.internal.vm.annotation=dev.nipafx.demo.java_x</arg>
						<!-- get access to `@RandomGeneratorProperties` in `Xkcd` -->
						<arg>--add-exports=java.base/jdk.internal.util.random=dev.nipafx.demo.java_x</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<!-- add the demo folder to the sources, so it gets compiled and tested -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>add-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/demo/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<includes>
						<!-- execute files ending in `Demo` as tests -->
						<include>**/*Demo.java</include>
					</includes>
					<!-- make demos accessible for testing framework -->
					<argLine>--add-opens=dev.nipafx.demo.java_x/dev.nipafx.demo.java18.javadoc=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>dev.nipafx.demo.java10.runtime.appcds.HelloAppCDS</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<sourcepath>src/main/java</sourcepath>
					<subpackages>dev.nipafx.demo.java18.javadoc</subpackages>
					<additionalJOptions>
						<!-- get access to `@RandomGeneratorProperties` in `Xkcd` -->
						<additionalJOption>--add-exports=java.base/jdk.internal.util.random=dev.nipafx.demo.java_x</additionalJOption>
					</additionalJOptions>
				</configuration>
				<executions>
					<execution>
						<id>create-javadoc</id>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>copy-installed</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>${project.groupId}</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${project.version}</version>
									<type>${project.packaging}</type>
								</artifactItem>
							</artifactItems>
							<stripVersion>true</stripVersion>
							<outputDirectory>${project.build.directory}/app</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>compile</includeScope>
							<outputDirectory>${project.build.directory}/app</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- on JDK 17 and before, configure Javadoc to ignore (unknown) @snippet tags -->
		<profile>
			<id>java-17-</id>
			<activation>
				<jdk>(,17]</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<tags>
								<tag>
									<name>snippet</name>
									<placement>x</placement>
								</tag>
							</tags>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<!-- on JDK 18 and later, configure Javadoc with snippet path to demo source tree -->
		<profile>
			<id>java-18+</id>
			<activation>
				<jdk>[18,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<!-- set the demo and folders as snippet-path to find snippet files there -->
							<additionalOptions>
								<additionalOption>--snippet-path ${project.basedir}/src/demo/java${path.separator}${project.basedir}/src/demo/css</additionalOption>
								<additionalOption>--add-stylesheet ${project.basedir}/src/demo/css/javadoc-highlight.css</additionalOption>
							</additionalOptions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
